--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,9 @@ jobs:
       - run:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
-          command: cd autocompliance/src; coverage run -m pytest --durations=0 -vv -x \
-          --log-level=debug
+          command: |
+            cd autocompliance/src 
+            coverage run -m pytest --durations=0 -vv -x --log-level=debug
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
