--- a/.github/workflows/python-app-feature.yml
+++ b/.github/workflows/python-app-feature.yml
@@ -33,4 +33,5 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest
+        cd autocompliance/src 
+        coverage run -m pytest --durations=0 -vv -x --log-level=debug
